testsuites/LLT/compiler/Diagnose/lex_test/lex_illegal_content_in_interpolation/case3.expect.out
error: unterminated string interpolation
  ==> case3.cj:13:22:
   | 
13 |     var a = "cangjie ${can //}"
   |             ~        ^^^^^^^^^^^ unterminated string interpolation
   |             |
   |             because it is in single-line string
   | 

error: unterminated string interpolation
  ==> case3.cj:15:22:
   | 
15 |     var b = "cangjie ${can /* can
   |             ~        ^^^^^^^^^^^^^ unterminated string interpolation
   |             |
   |             because it is in single-line string
   | 

2 errors generated, 2 errors printed.
